[gd_scene load_steps=5 format=3 uid="uid://dgt7ssfbrip2g"]

[ext_resource type="Script" uid="uid://csu1acxppkyb6" path="res://Global_Scenes/Scene_Manager/Scripts/Scene_Manager.gd" id="1"]
[ext_resource type="Script" uid="uid://c3871jekedsru" path="res://Global_Scenes/Scene_Manager/Scripts/Loading_Screen.gd" id="3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6is47"]
bg_color = Color(0, 0, 0, 0)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v8k7y"]
content_margin_bottom = 0.0
bg_color = Color(0, 0.592157, 0.8, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0)
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[node name="Scene_Manager" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1")

[node name="Scene_Loaders" type="Node" parent="."]

[node name="Loading_Screen" type="Control" parent="."]
light_mask = 8
visibility_layer = 8
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="Background" type="TextureRect" parent="Loading_Screen"]
self_modulate = Color(0.639216, 0.639216, 0.639216, 1)
light_mask = 8
visibility_layer = 8
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1

[node name="Center" type="CenterContainer" parent="Loading_Screen"]
light_mask = 8
visibility_layer = 8
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Loading_Screen/Center"]
light_mask = 8
visibility_layer = 8
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="Text" type="Label" parent="Loading_Screen/Center/VBox"]
light_mask = 8
visibility_layer = 8
layout_mode = 2
size_flags_horizontal = 4
text = "LOADING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Progress" type="ProgressBar" parent="Loading_Screen/Center/VBox"]
light_mask = 8
visibility_layer = 8
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 20
theme_override_styles/background = SubResource("StyleBoxFlat_6is47")
theme_override_styles/fill = SubResource("StyleBoxFlat_v8k7y")
value = 50.0
